Bug 126350 - kspread doesn't save changes in files .ods
Summary: kspread doesn't save changes in files .ods
Status: RESOLVED FIXED
Alias: None
Product: calligrasheets
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: VHI critical
Target Milestone: ---
Assignee: Raphael Langerhorst
URL:
Keywords:
: 126988 127124 (view as bug list)
Depends on:
Blocks:
 
Reported: 2006-04-27 14:08 UTC by Argie
Modified: 2006-05-11 11:39 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
this is the document where I'm testing the bug (6.45 KB, application/vnd.oasis.opendocument.spreadsheet)
2006-04-27 16:47 UTC, Argie
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Argie 2006-04-27 14:08:15 UTC
Version:           1.5.0 (using KDE KDE 3.5.1)
Installed from:    Ubuntu Packages
OS:                Linux

After made a new Kspread document (ods format) I write some values (alfanumeric) in random cells.
Then I save the document and close Kspread. After open the document with Kspread (doing double click on the document), I only find values in cell A1:A1: the rest of them has dissapears.

I'm using Kubuntu with KDE 3.5.1, spanish version, and Kspread 1.5.0 (english version).
This is an standart installation of Koffice, by using apt-get.
Comment 1 Stefan Nikolaus 2006-04-27 14:22:01 UTC
Could you provide a small test file and describe step by step in which cells you enter new values and which disappear, please?
Comment 2 Argie 2006-04-27 16:47:11 UTC
Created attachment 15800 [details]
this is the document where I'm testing the bug
Comment 3 Argie 2006-04-27 16:48:00 UTC
Yes,

I'm writing the word "test" in the following cells:

A1, B2, C3, D4, E5, F6, G7, H8, I9, J10

and also in:

B11, B12
C12, C13
D13, D14
E14, E15

Then, I write the following words:

B15: home
B16: sun
B17: fun
B18: guitarr

B23: home
B24: sun
B25: fun
B26: guitarr

After save the document and reopen it, the words form cell B23 to B26 has dissapears.
This is strange, because if I delete the words from cell B15 to B16 and B23 to B26 Kspread can save the document fine.
But when I write more words in the colum B the problem appears...
Comment 4 Stefan Nikolaus 2006-04-28 13:33:43 UTC
SVN commit 535017 by nikolaus:

Due to possible data loss revert:
SVN commit 522407 by nikolaus:
OpenDocument    Saving speedup

Better a slow saving as one that eats your data.

BUG: 126350
CCBUG: 121125


 M  +9 -30     kspread_cell.cc  
 M  +2 -4      kspread_cell.h  
 M  +4 -68     kspread_cluster.cc  
 M  +4 -6      kspread_cluster.h  
 M  +67 -127   kspread_sheet.cc  
 M  +3 -2      kspread_sheet.h  
Comment 5 Stefan Nikolaus 2006-05-08 23:01:18 UTC
*** Bug 126988 has been marked as a duplicate of this bug. ***
Comment 6 Stefan Nikolaus 2006-05-11 11:39:32 UTC
*** Bug 127124 has been marked as a duplicate of this bug. ***