Due to possible data loss revert: SVN commit 522407 by nikolaus: OpenDocument    Saving speedup

Better a slow saving as one that eats your data.

BUG: 126350
CCBUG: 121125

svn path=/branches/koffice/1.5/koffice/; revision=535017